syntax="proto3";

package protobuf_entity;

option go_package = "/protobuf_entity";

message DiscoveryFeed {
    string feed_url=1;
    string site_url=2;
    string title=3;
    string description=4;
    string icon_type=5;
    string  icon_content=6;
	
}


message ListDiscoveryFeed {
    repeated DiscoveryFeed discoveryFeeds=1;
}